fixed alignment problems in style sheet

--- a/index.css
+++ b/index.css
@@ -13,3 +13,17 @@ h1 {
 	margin-left:10px;
 	margin-right:10px;
 }
+
+a {
+	font-size: 
+
+}
+
+p {
+	font-size: 20px;
+	color: maroon;
+	border: dotted;
+	border-width: 3px;
+
+
+}
